# game_of_life

./: .gitignore  CMakeLists.txt  main.cpp
backend/include/: cell.hpp  grid.hpp  rule_book.hpp  state_updater.hpp  utils.hpp
backend/src/: CMakeLists.txt  cell.cpp  grid.cpp  rule_book.cpp  state_updater.cpp  utils.cpp
communicator/include/: communicator.hpp
communicator/src/: CMakeLists.txt  communicator.cpp
frontend/include/: grid_widget.hpp  window.hpp
frontend/src/: CMakeLists.txt  grid_widget.cpp  window.cpp
